--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install: npm install
 script: npm test
 
 after_script:
-  - codeclimate-test-reporter < lcov.info
+- npm install -g codeclimate-test-reporter
+- codeclimate-test-reporter < lcov.info
 
 
